Added hamburger menu

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
     <title>Document</title>
   </head>
   <body>
-    <footer>
+    <nav>
+      <div class="navbar">
+        <div class="container nav-container">
+          <input class="checkbox" type="checkbox" name="" id="" />
+          <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+          </div>
+          <div class="menu-items">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Om FEL</a></li>
+            <li><a href="#">LAB</a></li>
+            <li><a href="#">Utforska mer</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!--     FOOTER BÖRJAR HÄR-->
+    <!--  <footer>
       <h3>FUTURE EXPERIENCE LAB</h3>
       <p>Tillsammans provkör vi framtiden, och skapar den.</p>
 
@@ -29,6 +51,7 @@
       </p>
 
       <h3>Nätverk</h3>
-    </footer>
+    </footer> -->
+    <script src="index.js"></script>
   </body>
 </html>
