--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/mediaqueries.css" />
+    <link rel="stylesheet" href="/styles/typography.css" />
+
+    <title>FEL</title>
   </head>
   <body>
+    <!-- HAMBURGER MENU  -->
     <nav>
       <div class="navbar">
         <div class="container nav-container">
@@ -29,6 +32,19 @@
         </div>
       </div>
     </nav>
+
+    <!--  HERO SE-->
+    <div class="hero">
+      <h1>
+        FUTURE<br />
+        EXPERIENCE LAB
+      </h1>
+      <img
+        src="images/hero.png"
+        alt="a rough stone wall with a big metal door with sign"
+      />
+    </div>
+
     <!--     FOOTER BÖRJAR HÄR-->
     <!--  <footer>
       <h3>FUTURE EXPERIENCE LAB</h3>
