--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
     </nav>
 
     <!--  HERO SE-->
-    <div class="hero">
-      <h1>
-        FUTURE<br />
-        EXPERIENCE LAB
-      </h1>
-      <img
-        src="images/hero.png"
-        alt="a rough stone wall with a big metal door with sign"
-      />
-    </div>
+    <section>
+      <div class="hero">
+        <h1>
+          FUTURE<br />
+          EXPERIENCE LAB
+        </h1>
+        <img
+          src="images/hero.png"
+          alt="a rough stone wall with a big metal door with sign"
+        />
+      </div>
+    </section>
 
     <!--     FOOTER BÖRJAR HÄR-->
     <!--  <footer>
