--- a/index.html
+++ b/index.html
@@ -46,6 +46,34 @@
         />
       </div>
     </section>
+    <section>
+      <div class="section-2">
+        <div class="row">
+          <div class="column">
+            <div class="text-column">
+              <h2>VAD ÄR FUTURE EXPERIENCE LAB?</h2>
+              <p>
+                Future Experience Lab är ett innovationsinitiativ för att stärka
+                upplevelsedestinationen Göteborg med särskilt fokus på
+                hybridupplevelser som bidrar till samhällsförändring.
+              </p>
+              <p>
+                Genom engagerande samarbetsmetoder, kreativitet och
+                upptäckarlust får destinationer, organisationer, företag och
+                individer chans att klämma, känna och smaka på framtidens
+                upplevelser med målet att utveckla modeller för hållbar
+                samhällsförändring.
+              </p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="img-column">
+              <img src="images/section-2.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--     FOOTER BÖRJAR HÄR-->
     <!--  <footer>
