--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           src="images/hero.png"
           alt="a rough stone wall with a big metal door with sign"
         />
+
+        <p>
+          En experimentverkstad för att provköra framtiden. <br />
+          Och skapa den.
+        </p>
       </div>
     </section>
 
