--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </div>
       </div>
     </nav>
+    <div class="nav-desktop">
+      <li><a href="#">START</a></li>
+      <li><a href="#">LAB</a></li>
+      <li><a href="#">KONTAKT</a></li>
+    </div>
 
     <!--  HERO SE-->
     <section>
