updated desktop navbar

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       </div>
     </nav>
     <div class="nav-desktop">
-      <li><a href="#">START</a></li>
-      <li><a href="#">LAB</a></li>
-      <li><a href="#">KONTAKT</a></li>
+      <div class="text-border">START</div>
+      <div class="text-border">LAB</div>
+      <div class="text-border">KONTAKT</div>
     </div>
 
     <!--  HERO SE-->
