--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
           FUTURE<br />
           EXPERIENCE LAB
         </h1>
-        <img
-          src="images/hero.png"
-          alt="a rough stone wall with a big metal door with sign"
-        />
-
+        <img src="images/hero.png" alt="a grey " />
         <p>
           En experimentverkstad för att provköra framtiden. <br />
           Och skapa den.
