--- a/index.html
+++ b/index.html
@@ -84,7 +84,32 @@
         </div>
       </div>
     </section>
-
+    <section>
+      <div class="lab-wrapper">
+        <div class="lab">
+          <p>FEB 2022</p>
+          <h3>LAB01</h3>
+          <img src="images/LAB01.png" />
+          <p>
+            I LAB01 tar vi oss an utmaningen att göra Göteborg världsledande i
+            hybrida upplevelser. <br />
+            Studerande från Yrgos utbildning Event Marketing & Management kommer
+            i olika uppdrag utmanas i att ta fram unika hybridevent till åtta
+            uppdragsgivare.
+          </p>
+        </div>
+        <div class="lab">
+          <p>TBA</p>
+          <h3>LAB02</h3>
+          <img src="images/LAB02.png" />
+        </div>
+        <div class="lab">
+          <p>TBA</p>
+          <h3>LAB03</h3>
+          <img src="images/LAB03.png" />
+        </div>
+      </div>
+    </section>
     <!--     FOOTER BÖRJAR HÄR-->
     <!--  <footer>
       <h3>FUTURE EXPERIENCE LAB</h3>
