--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           FUTURE<br />
           EXPERIENCE LAB
         </h1>
-        <img src="images/hero.png" alt="a grey " />
         <p>
           En experimentverkstad för att provköra framtiden. <br />
           Och skapa den.
         </p>
+        <img src="images/HERO2.png" alt="a grey " />
       </div>
     </section>
     <section>
