--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           En experimentverkstad för att provköra framtiden. <br />
           Och skapa den.
         </p>
-        <img src="images/HERO2.png" alt="a grey " />
+        <!-- <img src="images/HERO2.png" alt="a grey " /> -->
       </div>
     </section>
-    <section>
+    <!-- <section>
       <div class="section-2">
         <div class="row">
           <div class="column">
@@ -79,7 +79,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <section>
       <div class="lab-wrapper">
         <div class="lab">
