Media queries LAB

--- a/index.html
+++ b/index.html
@@ -77,24 +77,17 @@
       <div class="lab-wrapper">
         <div class="lab">
           <p>FEB 2022</p>
-          <h3>LAB01</h3>
+          <h2>LAB</h2>
           <img src="images/LAB01.png" />
-          <p>
-            I LAB01 tar vi oss an utmaningen att göra Göteborg världsledande i
-            hybrida upplevelser. <br />
-            Studerande från Yrgos utbildning Event Marketing & Management kommer
-            i olika uppdrag utmanas i att ta fram unika hybridevent till åtta
-            uppdragsgivare.
-          </p>
         </div>
         <div class="lab">
           <p>TBA</p>
-          <h3>LAB02</h3>
+          <h2>LAB</h2>
           <img src="images/LAB02.png" />
         </div>
         <div class="lab">
           <p>TBA</p>
-          <h3>LAB03</h3>
+          <h2>LAB</h2>
           <img src="images/LAB03.png" />
         </div>
       </div>
