--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
       <div class="lab-wrapper">
         <div class="lab">
           <p>FEB 2022</p>
-          <h2>LAB</h2>
+          <h2>LAB01</h2>
           <img src="images/LAB01.png" />
         </div>
         <div class="lab">
           <p>TBA</p>
-          <h2>LAB</h2>
+          <h2>LAB02</h2>
           <img src="images/LAB02.png" />
         </div>
         <div class="lab">
           <p>TBA</p>
-          <h2>LAB</h2>
+          <h2>LAB03</h2>
           <img src="images/LAB03.png" />
         </div>
       </div>
