--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
           <p>FEB 2022</p>
           <h2>LAB01</h2>
           <img src="images/LAB01.png" />
+          <button>Read more</button>
         </div>
         <div class="lab">
           <p>TBA</p>
           <h2>LAB02</h2>
           <img src="images/LAB02.png" />
+          <button>Read more</button>
         </div>
         <div class="lab">
           <p>TBA</p>
           <h2>LAB03</h2>
           <img src="images/LAB03.png" />
+          <button>Read more</button>
         </div>
       </div>
     </section>
