CSS LAB continue

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         </div>
       </div>
     </section>
+    <!-- LAB SECTION -->
     <section>
       <div class="lab-wrapper">
         <div class="lab">
