--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/hero.css" />
+    <link rel="stylesheet" href="styles/info.css" />
+    <link rel="stylesheet" href="styles/explore.css" />
+    <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="/styles/mediaqueries.css" />
     <link rel="stylesheet" href="/styles/typography.css" />
