--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </p>
         </div>
         <div class="column">
-          <img src="images/section-2.png" />
+          <img src="images/info.png" />
         </div>
       </div>
     </section>
