--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
         </div>
       </div>
     </section>
-
+    <!-- EXPLORE SECTION -->
+    <section>
+      <div class="explore-wrapper">
+        <h2>UTFORSKA MER</h2>
+        <div class="explore"><img src="images/kultur.png" /></div>
+        <div class="explore"><img src="images/events.png" /></div>
+        <div class="explore"><img src="images/reklam.png" /></div>
+        <div class="explore"><img src="images/samarbete.png" /></div>
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
