added css for explore section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/explore.css" />
     <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="stylesheet" href="/styles/mediaqueries.css" />
+    <!--  <link rel="stylesheet" href="/styles/mediaqueries.css" /> -->
     <link rel="stylesheet" href="/styles/typography.css" />
 
     <title>FEL</title>
@@ -101,9 +101,9 @@
       </div>
     </section>
     <!-- EXPLORE SECTION -->
-    <section>
+    <section class="explore-section">
+      <h2>UTFORSKA MER</h2>
       <div class="explore-wrapper">
-        <h2>UTFORSKA MER</h2>
         <div class="explore"><img src="images/kultur.png" /></div>
         <div class="explore"><img src="images/events.png" /></div>
         <div class="explore"><img src="images/reklam.png" /></div>
