--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="styles/explore.css" />
     <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="stylesheet" href="/styles/mediaqueries.css" />
     <link rel="stylesheet" href="/styles/typography.css" />
 
     <title>FEL</title>
@@ -47,11 +46,11 @@
       <div class="hero">
         <h1>
           FUTURE<br />
-          EXPERIENCE LAB
+          EXPERIENCE <br />LAB
         </h1>
         <p>
-          En experimentverkstad för att provköra framtiden. <br />
-          Och skapa den.
+          En experimentverkstad för att provköra <br />
+          framtiden. Och skapa den.
         </p>
         <!-- <img src="images/HERO2.png" alt="a grey " /> -->
       </div>
