--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/explore.css" />
     <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
     <!--  <link rel="stylesheet" href="/styles/mediaqueries.css" /> -->
     <link rel="stylesheet" href="/styles/typography.css" />
 
@@ -104,10 +105,40 @@
     <section class="explore-section">
       <h2>UTFORSKA MER</h2>
       <div class="explore-wrapper">
-        <div class="explore"><img src="images/kultur.png" /></div>
-        <div class="explore"><img src="images/events.png" /></div>
-        <div class="explore"><img src="images/reklam.png" /></div>
-        <div class="explore"><img src="images/samarbete.png" /></div>
+        <div class="explore">
+          <p>KULTUR</p>
+          <img src="images/kultur.png" />
+        </div>
+        <div class="explore">
+          <p>EVENTS</p>
+          <img src="images/events.png" />
+        </div>
+        <div class="explore">
+          <p>REKLAM</p>
+          <img src="images/reklam.png" />
+        </div>
+        <div class="explore">
+          <p>SAMARBETE</p>
+          <img src="images/samarbete.png" />
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="contact">
+        <h2>
+          PROVKÖR DIN <br />
+          VERKSAMHETS <br />
+          FRAMTID
+        </h2>
+        <p>
+          Initiativtagare är UIrica Ramstedt från <br />
+          förändringsbyrån Marlon, Johan Carlberg <br />
+          från Yrgo och Christer Hedberg och <br />
+          Anna-Maria Ölander från samarbetsbyrån <br />
+          &friends.
+        </p>
+        <button>Kontakta oss</button>
+        <img src="images/contact.png" />
       </div>
     </section>
     <script src="index.js"></script>
