--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="styles/explore.css" />
     <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="stylesheet" href="styles/contact.css" />
-    <!--  <link rel="stylesheet" href="/styles/mediaqueries.css" /> -->
     <link rel="stylesheet" href="/styles/typography.css" />
 
     <title>FEL</title>
@@ -80,23 +78,30 @@
     </section>
     <!-- LAB SECTION -->
     <section>
+      <hr />
       <div class="lab-wrapper">
         <div class="lab">
           <p>FEB 2022</p>
           <h2>LAB01</h2>
-          <img src="images/LAB01.png" />
+          <div class="lab-content">
+            <img src="images/LAB01.png" />
+          </div>
           <button>Read more</button>
         </div>
         <div class="lab">
           <p>TBA</p>
           <h2>LAB02</h2>
-          <img src="images/LAB02.png" />
+          <div class="lab-content">
+            <img src="images/LAB02.png" />
+          </div>
           <button>Read more</button>
         </div>
         <div class="lab">
           <p>TBA</p>
           <h2>LAB03</h2>
-          <img src="images/LAB03.png" />
+          <div class="lab-content">
+            <img src="images/LAB03.png" />
+          </div>
           <button>Read more</button>
         </div>
       </div>
@@ -105,40 +110,10 @@
     <section class="explore-section">
       <h2>UTFORSKA MER</h2>
       <div class="explore-wrapper">
-        <div class="explore">
-          <p>KULTUR</p>
-          <img src="images/kultur.png" />
-        </div>
-        <div class="explore">
-          <p>EVENTS</p>
-          <img src="images/events.png" />
-        </div>
-        <div class="explore">
-          <p>REKLAM</p>
-          <img src="images/reklam.png" />
-        </div>
-        <div class="explore">
-          <p>SAMARBETE</p>
-          <img src="images/samarbete.png" />
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="contact">
-        <h2>
-          PROVKÖR DIN <br />
-          VERKSAMHETS <br />
-          FRAMTID
-        </h2>
-        <p>
-          Initiativtagare är UIrica Ramstedt från <br />
-          förändringsbyrån Marlon, Johan Carlberg <br />
-          från Yrgo och Christer Hedberg och <br />
-          Anna-Maria Ölander från samarbetsbyrån <br />
-          &friends.
-        </p>
-        <button>Kontakta oss</button>
-        <img src="images/contact.png" />
+        <div class="explore"><img src="images/kultur.png" /></div>
+        <div class="explore"><img src="images/events.png" /></div>
+        <div class="explore"><img src="images/reklam.png" /></div>
+        <div class="explore"><img src="images/samarbete.png" /></div>
       </div>
     </section>
     <script src="index.js"></script>
