--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="styles/info.css" />
     <link rel="stylesheet" href="styles/explore.css" />
     <link rel="stylesheet" href="styles/LAB.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="/styles/typography.css" />
 
-    <title>FEL</title>
+    <title>Future Experience LAB</title>
   </head>
   <body>
     <!-- HAMBURGER MENU  -->
@@ -128,21 +129,21 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="contact">
-        <h2>
-          PROVKÖR DIN <br />
-          VERKSAMHETS <br />
-          FRAMTID
-        </h2>
-        <p>
-          Initiativtagare är UIrica Ramstedt från <br />
-          förändringsbyrån Marlon, Johan Carlberg <br />
-          från Yrgo och Christer Hedberg och <br />
-          Anna-Maria Ölander från samarbetsbyrån <br />
-          &friends.
-        </p>
-        <button>Kontakta oss</button>
+    <section class="contact">
+      <h2>
+        PROVKÖR DIN <br />
+        VERKSAMHETS <br />
+        FRAMTID
+      </h2>
+      <p>
+        Initiativtagare är UIrica Ramstedt från <br />
+        förändringsbyrån Marlon, Johan Carlberg <br />
+        från Yrgo och Christer Hedberg och <br />
+        Anna-Maria Ölander från samarbetsbyrån <br />
+        &friends.
+      </p>
+      <button>Kontakta oss</button>
+      <div class="contact-content">
         <img src="images/contact.png" />
       </div>
     </section>
