--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             klämma, känna och smaka på framtidens upplevelser med målet att
             utveckla modeller för hållbar samhällsförändring.
           </p>
+          <button>Läs mer om FEL</button>
         </div>
         <div class="column">
           <img src="images/info.png" />
@@ -84,6 +85,8 @@
         <div class="lab">
           <p>FEB 2022</p>
           <h2>LAB01</h2>
+          <hr />
+
           <div class="lab-content">
             <img src="images/LAB01.png" />
           </div>
@@ -92,6 +95,8 @@
         <div class="lab">
           <p>TBA</p>
           <h2>LAB02</h2>
+          <hr />
+
           <div class="lab-content">
             <img src="images/LAB02.png" />
           </div>
@@ -100,6 +105,8 @@
         <div class="lab">
           <p>TBA</p>
           <h2>LAB03</h2>
+          <hr />
+
           <div class="lab-content">
             <img src="images/LAB03.png" />
           </div>
