--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles/LAB.css" />
     <link rel="stylesheet" href="styles/contact.css" />
     <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
+
     <link rel="stylesheet" href="/styles/typography.css" />
 
     <title>Future Experience LAB</title>
@@ -157,3 +159,27 @@
     <script src="index.js"></script>
   </body>
 </html>
+<footer>
+  <div class="footer-wrapper">
+    <div class="footer-container">
+      <h2>FUTURE <br />EXPERIENCE LAB</h2>
+      <p>Tillsammans provkör vi framtiden. Och skapar den.</p>
+      <div class="icons"></div>
+      <a href="#"><img src="/images/tiktok.png" /></a>
+      <a href="#"><img src="/images/youtube.png" /></a>
+      <a href="#"><img src="/images/facebook.png" /></a>
+      <a href="#"><img src="/images/instagram.png" /></a>
+    </div>
+    <div class="footer-container">
+      <h4>Kontakt</h4>
+      <p>
+        Ulrica Ramstedt 070-384 96 00 <br />
+        ulrica.ramstedt@marlon.se <br />
+        Johan Carlberg <br />
+        johan.carlberg@educ.goteborg.se <br />
+        Anna-Maria Ölander <br />
+        anna-maria@andfriends.se
+      </p>
+    </div>
+  </div>
+</footer>
