more footer css

--- a/index.html
+++ b/index.html
@@ -156,30 +156,39 @@
         <img src="images/contact.png" />
       </div>
     </section>
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h2>FUTURE <br />EXPERIENCE LAB</h2>
+          <h5>
+            Tillsammans provkör vi framtiden. Och <br />
+            skapar den.
+          </h5>
+          <div class="icons-wrapper">
+            <a class="icons" href="#"><img src="/images/tiktok.png" /></a>
+            <a class="icons" href="#"><img src="/images/youtube.png" /></a>
+            <a class="icons" href="#"><img src="/images/facebook.png" /></a>
+            <a class="icons" href="#"><img src="/images/instagram.png" /></a>
+          </div>
+        </div>
+        <div class="footer-container">
+          <h4>Kontakt</h4>
+          <p>
+            Ulrica Ramstedt <br />
+            070-384 96 00 <br />
+            ulrica.ramstedt@marlon.se
+          </p>
+          <p>
+            Johan Carlberg <br />
+            johan.carlberg@educ.goteborg.se
+          </p>
+          <p>
+            Anna-Maria Ölander <br />
+            anna-maria@andfriends.se
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
-<footer>
-  <div class="footer-wrapper">
-    <div class="footer-container">
-      <h2>FUTURE <br />EXPERIENCE LAB</h2>
-      <p>Tillsammans provkör vi framtiden. Och skapar den.</p>
-      <div class="icons"></div>
-      <a href="#"><img src="/images/tiktok.png" /></a>
-      <a href="#"><img src="/images/youtube.png" /></a>
-      <a href="#"><img src="/images/facebook.png" /></a>
-      <a href="#"><img src="/images/instagram.png" /></a>
-    </div>
-    <div class="footer-container">
-      <h4>Kontakt</h4>
-      <p>
-        Ulrica Ramstedt 070-384 96 00 <br />
-        ulrica.ramstedt@marlon.se <br />
-        Johan Carlberg <br />
-        johan.carlberg@educ.goteborg.se <br />
-        Anna-Maria Ölander <br />
-        anna-maria@andfriends.se
-      </p>
-    </div>
-  </div>
-</footer>
