footer almost done

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="explore">
           <p>REKLAM</p>
-          <img src="images/reklam.png" />
+          <img src="images/test.png" />
         </div>
         <div class="explore">
           <p>SAMARBETE</p>
@@ -164,13 +164,15 @@
             Tillsammans provkör vi framtiden. Och <br />
             skapar den.
           </p>
+
           <div class="icons-wrapper">
+            <a class="icons" href="#"><img src="/images/facebook.png" /></a>
             <a class="icons" href="#"><img src="/images/tiktok.png" /></a>
             <a class="icons" href="#"><img src="/images/youtube.png" /></a>
-            <a class="icons" href="#"><img src="/images/facebook.png" /></a>
             <a class="icons" href="#"><img src="/images/instagram.png" /></a>
           </div>
         </div>
+        <hr />
         <div class="footer-container">
           <h3>Kontakt</h3>
           <p>
@@ -187,6 +189,7 @@
             anna-maria@andfriends.se
           </p>
         </div>
+        <hr />
       </div>
     </footer>
     <script src="index.js"></script>
