--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/hero.css" />
     <link rel="stylesheet" href="styles/info.css" />
@@ -12,7 +13,6 @@
     <link rel="stylesheet" href="styles/contact.css" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="styles/footer.css" />
-
     <link rel="stylesheet" href="/styles/typography.css" />
 
     <title>Future Experience LAB</title>
@@ -88,11 +88,10 @@
           <p>FEB 2022</p>
           <h2>LAB01</h2>
           <hr />
-
           <div class="lab-content">
             <img src="images/LAB01.png" />
           </div>
-          <button>Read more</button>
+          <button>Läs mer</button>
         </div>
         <div class="lab">
           <p>TBA</p>
@@ -102,7 +101,7 @@
           <div class="lab-content">
             <img src="images/LAB02.png" />
           </div>
-          <button>Read more</button>
+          <button>LÄS MER</button>
         </div>
         <div class="lab">
           <p>TBA</p>
@@ -112,7 +111,7 @@
           <div class="lab-content">
             <img src="images/LAB03.png" />
           </div>
-          <button>Read more</button>
+          <button>LÄS MER</button>
         </div>
       </div>
     </section>
@@ -173,7 +172,7 @@
           </div>
         </div>
         <hr />
-        <div class="footer-container">
+        <div class="footer-container right">
           <h3>Kontakt</h3>
           <p>
             Ulrica Ramstedt <br />
