--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <hr />
           <div class="lab-content">
             <img src="images/LAB01.png" />
+            <div class="img-hover"></div>
           </div>
           <button>Läs mer</button>
         </div>
@@ -100,8 +101,9 @@
 
           <div class="lab-content">
             <img src="images/LAB02.png" />
+            <div class="img-hover"></div>
           </div>
-          <button>LÄS MER</button>
+          <button>Läs mer</button>
         </div>
         <div class="lab">
           <p>TBA</p>
@@ -110,8 +112,9 @@
 
           <div class="lab-content">
             <img src="images/LAB03.png" />
+            <div class="img-hover"></div>
           </div>
-          <button>LÄS MER</button>
+          <button>Läs mer</button>
         </div>
       </div>
     </section>
@@ -133,7 +136,7 @@
         </div>
         <div class="explore">
           <p>SAMARBETE</p>
-          <img src="images/samarbete.png" />
+          <img class="work-hover" src="images/samarbete.png" />
         </div>
       </div>
     </section>
