border and text-hover

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="explore">
           <p>SAMARBETE</p>
-          <img class="work-hover" src="images/samarbete.png" />
+          <img src="images/samarbete.png" />
         </div>
       </div>
     </section>
